# blog-visualizing-modern-cpp-using-clang-and-uml

./: .clang-format  .clang-uml  .gitignore  CMakeLists.txt  README.md  advanced_sequence.cpp  basic_example.cpp  basic_sequence.cpp  concepts.cpp  decl_ids.h  decl_ids1.cpp  decl_ids2.cpp  deduced_context.cpp  factorial_sequence.cpp  namespace_package.cpp  nonvirtual_visitor_pattern.cpp  recursive_list.cpp  smart_pointer_relationships.cpp  template_specializations.cpp  type_list.cpp  variadic_print.cpp
include_diagram/include/: include1.h
include_diagram/include/lib1/: lib1.h
include_diagram/src/: include_diagram.cpp
simple_app/: CMakeLists.txt  simple_app.cpp
simple_app/src/: backend_lib.cppm  desktop.cppm  frontend_lib.cppm  simple_app_mod.cppm  webview.cppm
